Ajuste header y seccion medios de pago Footer

--- a/index.html
+++ b/index.html
@@ -119,20 +119,85 @@
             </nav>
         </div>
     </header>
+
     <main>
         <div class="spacer"></div>
-        <div class="center">
 
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. In corporis aliquid, ullam nostrum, vero mollitia numquam saepe, qui unde illo quaerat odio exercitationem! Quia debitis, perferendis odit dignissimos corporis quo? Atque, deleniti! Fuga ipsa neque magni qui ea unde repudiandae totam et quod suscipit nisi cumque voluptatem, harum rem voluptate atque eos impedit. Dolorum aliquam laborum veniam hic blanditiis illum suscipit. Tempora, dolorem. Eaque et beatae modi. Veritatis magni debitis commodi doloribus veniam corrupti provident excepturi quasi omnis soluta. Ab consequuntur alias quae non in reiciendis facilis autem voluptates dolorum aliquam adipisci, facere temporibus! Sed illo nemo perspiciatis. Dolores ipsam mollitia aspernatur unde dignissimos, magni voluptatem, sequi asperiores obcaecati repudiandae, totams doloremque eligendi nisi temporibus quod voluptatibus veniam error quo distinctio a similique, necessitatibus magni officia. Ratione sequi velit inventore pariatur illo molestias non unde, eos totam. Doloremque cumque deserunt dicta nostrum voluptate assumenda qui quam eligendi, quas optio vel magni exercitationem dolorum praesentium recusandae molestias soluta aspernatur explicabo nisi quod nulla animi eos quo adipisci. Hic qui natus accusantium temporibus consectetur. Numquam exercitationem minus doloribus sint temporibus harum tenetur, asperiores repudiandae aut autem ipsam alias possimus ad ab eligendi placeat iusto aspernatur odit error eaque dolorem? Porro, obcaecati? Aperiam quia repellat hic ut voluptatibus ullam excepturi, odit quisquam earum repellendus commodi deserunt quo alias deleniti magnam quidem reprehenderit. Placeat molestias debitis ipsa sapiente tempora architecto at aut cumque quo atque voluptatibus labore velit sit animi, itaque laudantium inventore, nulla officiis neque enim a et maxime iusto? Velit eligendi cumque sapiente omnis nesciunt! Maxime, assumenda nesciunt!
-        </div>
+        <section class="s_hero">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quasi. Illo vel sed quos impedit atque molestiae eveniet nesciunt quis veritatis nam, unde illum, error ipsa repellendus facere inventore! Ipsam ipsa officiis error, reiciendis consectetur debitis, similique eligendi possimus cupiditate sequi dolore ratione, eaque qui cumque mollitia repellendus explicabo quidem laborum quos nisi! Qui, obcaecati atque doloremque reprehenderit rem minima quibusdam. Ea, commodi veritatis quis minus maxime molestias quos ullam laboriosam voluptates error! Autem est eveniet ipsa placeat sunt cumque vitae nam. At soluta similique assumenda exercitationem maiores iste ea esse odio sed repellat mollitia autem nemo maxime, vel doloremque blanditiis hic deleniti ad fuga laudantium! Delectus animi, aspernatur facilis architecto perferendis a, libero magni eius alias ex sed eveniet, officia dicta molestiae necessitatibus voluptates? Nisi sequi laboriosam expedita iusto cumque dolores eos quia in beatae. Dicta autem beatae voluptatem sunt suscipit maxime eum placeat laboriosam, officia fugiat esse, aut fuga atque, cumque nulla similique! Accusantium doloremque saepe voluptatibus, quo alias impedit fuga eveniet ut! Sequi suscipit saepe ab. Quisquam recusandae mollitia earum temporibus autem totam aut rem nesciunt in veniam nemo sapiente officia officiis fugiat possimus aliquid ratione esse, corrupti eligendi molestias aspernatur similique. Itaque nisi iusto alias eum odio reiciendis veritatis quos, iste cum est enim nostrum voluptatibus eos. Aliquid quisquam illo molestiae repellendus officiis laborum, esse hic, voluptates temporibus sit beatae autem! Dolore, quibusdam velit autem animi veniam laboriosam commodi aut nemo necessitatibus ad nam reprehenderit. Laboriosam, excepturi adipisci voluptate quaerat aliquid facilis mollitia ducimus, ullam quis sint soluta provident quod amet earum tempora temporibus nisi exercitationem id repudiandae facere cumque necessitatibus reiciendis nihil? Consequatur cum molestias, nisi aut nihil nam. Nemo odit illum dolore unde, culpa, magni amet recusandae voluptatum doloribus harum ut quibusdam. Quidem aspernatur sapiente earum! Enim vero eaque, porro unde qui, rem dolorum quibusdam similique molestias, quam earum quas illo? Enim, voluptatum exercitationem vitae corrupti atque impedit et id ratione animi illum accusantium sunt debitis omnis laudantium quod optio quia. Iste, asperiores ducimus mollitia earum magni harum dolores maxime porro illum tempore officiis. Accusantium quia architecto deleniti voluptatum nulla, animi, obcaecati rem magni voluptates provident dolore cupiditate consequatur maxime doloremque perferendis officiis explicabo ullam. Quae alias consequatur mollitia vitae vel eum expedita dignissimos ipsum. Corporis error reiciendis, consequuntur nulla ducimus sapiente ex id dolore similique natus. Porro eveniet fuga culpa dolorum? Eaque sed expedita quos saepe veniam esse, quia ex hic ipsam vel autem debitis quas excepturi qui aliquam. Officia, ducimus. Blanditiis, optio distinctio fuga praesentium veritatis illo facere repellat accusamus illum natus? Error ipsum corporis aut ut. Fugiat, nam nesciunt libero labore ullam nobis sed quia a vitae id officiis quisquam nihil in, earum numquam. Eum repellendus quaerat ab laudantium quas sit fugit porro, temporibus amet nesciunt doloremque consequuntur minima! Soluta modi doloribus recusandae porro natus cumque laudantium explicabo ullam, illo in sunt velit non dolor maiores, ipsam quis similique quae inventore tempora dignissimos veritatis! Dolorem alias harum quaerat quam! Praesentium molestiae corporis, fuga in iure adipisci excepturi nisi porro veniam ea nihil. Adipisci animi doloribus vero sequi illum molestiae reiciendis aliquid quis dolores? Nulla id non ullam rerum rem vero, adipisci, qui aperiam eaque distinctio minima, officiis fuga. At quasi adipisci nihil perferendis iste distinctio esse sequi magnam veniam temporibus ratione doloribus aut excepturi officia, rem quas molestias ab deserunt in labore eveniet exercitationem dolores fugit. Non ipsam quam, libero, sit repellat excepturi tempora, placeat ipsum corrupti fuga veniam aspernatur. Voluptatum rem, velit numquam repellat sed asperiores magni voluptatibus hic molestias, accusamus nulla est sunt aut esse fugit sapiente voluptas totam adipisci, expedita perspiciatis commodi nam harum. Fuga ut recusandae velit deleniti in necessitatibus earum laudantium asperiores magnam doloremque quisquam fugit temporibus numquam rem, aliquid obcaecati! Voluptatibus, tenetur inventore sapiente similique dolorum repudiandae corporis neque! Vero et mollitia, consequuntur unde expedita itaque pariatur nam impedit temporibus, animi amet architecto qui id? Non ex nostrum sit omnis numquam facere laboriosam cum molestiae labore, laudantium ipsam commodi excepturi! At quaerat libero consectetur recusandae quae magni cum aspernatur consequatur molestias nobis! Ipsam alias iure odit laborum quos eaque tempora et laudantium aspernatur beatae sapiente inventore harum nam, optio non ipsa dignissimos, distinctio at illum esse fuga laboriosam consectetur itaque? Delectus esse cumque consequatur, dicta nam placeat obcaecati porro magni magnam ad tempore assumenda aspernatur voluptates dolorum quod aut accusamus veritatis sapiente a quae ea? Quis vero voluptates molestiae obcaecati dignissimos soluta laborum ipsam, libero eius hic reiciendis porro distinctio accusamus quam cumque facere eveniet vel excepturi rerum. Nam inventore quasi enim eaque unde incidunt, laudantium tempora! Repellendus nihil dolorum, suscipit temporibus ex inventore incidunt distinctio excepturi mollitia ab modi, vel corrupti eveniet numquam neque, quos eaque minima nesciunt enim consequatur quasi. Autem tenetur sed quas accusamus laborum sequi pariatur cum incidunt iure ipsam culpa tempora, inventore aperiam dicta error nemo soluta eos perferendis illum? In numquam quibusdam quia repellat quo sunt, explicabo veniam laborum sit ea ipsam, magni ducimus? Nulla in quod voluptate magnam. Maiores vero et labore magni hic itaque quidem quibusdam officia, distinctio consequatur obcaecati quos sed eveniet aliquid placeat. Suscipit quae molestias quasi fuga rerum ut aliquid blanditiis exercitationem facere quisquam, a quod eveniet recusandae quibusdam repudiandae, doloremque saepe rem? Vitae, aperiam numquam voluptas necessitatibus possimus alias ut quisquam! Ex, ad aut! Rerum atque fuga explicabo facilis, facere ratione blanditiis repudiandae aspernatur tempora nihil dolor! Sint rerum maxime ut esse accusamus, obcaecati voluptate quos id at placeat maiores! Soluta eos placeat perspiciatis consequatur? Eius laborum voluptate numquam veniam earum aperiam, quas, aliquam ut dolorem atque itaque iusto hic autem modi laudantium totam tempore eveniet molestiae rerum. Sit ad possimus, facere facilis, veniam quidem repellendus vero nulla, quas sapiente labore expedita voluptas placeat quae dignissimos voluptatum ipsum? Delectus quo, reprehenderit neque eos iure voluptatibus non iusto culpa eveniet voluptatum aperiam saepe quas rerum at nemo veniam doloremque consequuntur beatae quam optio. Eligendi asperiores, veniam qui quo hic suscipit minima voluptatem quod natus voluptatibus tenetur et similique deleniti voluptas, libero, sit recusandae atque quis aliquam odit amet animi ipsam soluta? Placeat, quidem voluptatum.
+        </section>
+
+        <section class="s_nuestros_serv">
+
+        </section>
+
+        <section class="s_solicita_valoracion">
+            
+        </section>
+
+        <section class="s_porque_bl">
+
+        </section>
+
+        <section class="s_testimonios">
+
+        </section>
+
+        <section class="s_club_beneficios">
+
+        </section>
+
+        <section class="s_blog">
+
+        </section>
     </main>
+
     <footer>
+
+
 
         <!-- SCRIPTS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="/plugins/swiper_slider/swiper-bundle.min.js"></script>
         <script src="/js/main.js"></script>
         <!-- ************** -->
+
+        <section class="s_medios_pago">
+            <div class="center">
+                <div class="c_medios_pago">
+                    <h5>
+                        Medios de pago
+                    </h5>
+                    <div class="logos_medios">
+                        <picture>
+                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                        </picture>
+                        <picture>
+                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                        </picture>
+                        <picture>
+                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                        </picture>
+                        <picture>
+                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                        </picture>
+                        <picture>
+                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                        </picture>
+                        <picture>
+                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                        </picture>
+                        <picture>
+                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                        </picture>
+                        <picture>
+                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                        </picture>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <div class="center">
             <div class="s_footer">
                 <div class="col_footer">
