avance secciones home

--- a/404.html
+++ b/404.html
@@ -123,9 +123,9 @@
     <main>
         <div class="spacer"></div>
 
-        <section class="s_gracias">
+        <section class="s_404">
             
-                <div class="c_gracias">
+                <div class="c_404">
                     <picture>
                         <h3>Error</h3>
                         <img width="365" height="126" src="images/diseno/02-404/img_404.svg" alt="404">
