--- a/index.html
+++ b/index.html
@@ -575,10 +575,14 @@
 
         <!-- SCRIPTS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="/plugins/swiper_slider/swiper-bundle.min.js"></script>
-        <script src="/plugins/modal_video/jquery-modal-video.min.js"></script>
-        <script src="/plugins/modal_video/modal-video.min.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="./plugins/swiper_slider/swiper-bundle.min.js"></script>
+        <script src="./plugins/modal_video/jquery-modal-video.min.js"></script>
+        <script src="./plugins/modal_video/modal-video.min.js"></script>
+        <script src="./js/main.js"></script>
+
+        <script>
+            $(".js-modal-btn").modalVideo();
+        </script>
         <!-- ************** -->
 
         <section class="s_medios_pago">
