Inicio y avance interna quienes somos

--- a/index.html
+++ b/index.html
@@ -318,6 +318,8 @@
             </div>
         </section>
 
+        <!-- SECCION DE TESTIMONIOS -->
+
         <section class="s_testimonios">
             <div class="center">
                 <h2 class="tit_section">
@@ -400,6 +402,9 @@
                             </div>
                             
                         </div>
+
+                        <!-- If we need pagination -->
+                        <div class="swiper-pagination"></div>
   
                     </div>
 
@@ -409,6 +414,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- SECCION CLUB DE BENEFICIOS -->
 
         <section class="s_club_beneficios">
             <div class="center">
