Interna Quienes Somos OK

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -81,16 +81,16 @@
                        <a href="">ENG</a>
                    </div>
                    <li>
-                       <a>QUIÉNES SOMOS <span class="fas fa-chevron-up"></span>
-                       </a>
+                       <a href="quienes_somos.html" class="active">QUIÉNES SOMOS </a>
+                       
+                   </li>
+                   <li>
+                       <a>SERVICIOS<span class="fas fa-chevron-up"></span></a>
                        <ul class="submenu">
                            <li>
                                <a href="">asdasdas</a>
                            </li>
                        </ul>
-                   </li>
-                   <li>
-                       <a>SERVICIOS<span class="fas fa-chevron-up"></span></a>
                    </li>
                    <li>
                        <a>DEFECTOS VISUALES<span class="fas fa-chevron-up"></span></a>
@@ -261,13 +261,13 @@
         <section class="operarse_bl">
             <div class="center">
                 <div class="c_operarse_bl">
-                    <h2>
+                    <h2 class="tit_section c_lightblue">
                         ¿Por qué operarse en bogotá laser?
                     </h2>
                     <nav class="navtabs_pri">
                         <ul>
                             <li>
-                                <a class="link_tab">Tecnología</a>
+                                <a class="link_tab active">Tecnología</a>
                             </li>
                             <li>
                                 <a class="link_tab">Infraestructura</a>
@@ -281,7 +281,7 @@
                        <nav class="navtab_sec">
                            <ul>
                                <li>
-                                   <a class="link_tab_sec">Sala refractiva</a>
+                                   <a class="link_tab_sec active">Sala refractiva</a>
                                </li>
                                <li>
                                    <a class="link_tab_sec">Sala Intraocular</a>
@@ -426,20 +426,20 @@
 
         <!-- SECCION SOLIICTA TU CITA AHORA -->
 
-        <section class="solicita_cita">
+        <section class="s_solicita_cita">
             <div class="center">
                 <div class="c_solicita_cita">
                     <h4>SOLICITA TU CITA AHORA</h4>
                     <form action="" class="form_solicitar_cita">
                         <div class="form_col">
                             <div class="cont_input">
-                                <input type="text">
+                                <input type="text" placeholder="Nombre">
                             </div>
                             <div class="cont_input">
-                                <input type="email">
+                                <input type="email" placeholder="Email">
                             </div>
                             <div class="cont_input">
-                                <input type="number">
+                                <input type="number" placeholder="Celular">
                             </div>
                             <div class="cont_submit">
                                 <button type="submit">Reservar</button>
