ajustes iniciales responsive Int Quienes somos

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -279,7 +279,10 @@
                     </nav>
                     <div class="cont_tab_pri">
                        <nav class="navtab_sec">
-                           <ul>
+                           <div class="mMobile_tab_sec">
+                               <span class="fas fa-bars"></span>
+                           </div>
+                           <ul class="menu_tab_sec active">
                                <li>
                                    <a class="link_tab_sec active">Sala refractiva</a>
                                </li>
