--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -282,7 +282,7 @@
                            <div class="mMobile_tab_sec">
                                <span class="fas fa-bars"></span>
                            </div>
-                           <ul class="menu_tab_sec active">
+                           <ul class="menu_tab_sec">
                                <li>
                                    <a class="link_tab_sec active">Sala refractiva</a>
                                </li>
