Avance estructura nuestros profesionales

--- a/nuestros_profesionales.html
+++ b/nuestros_profesionales.html
@@ -162,6 +162,90 @@
                 </div>
             </div>
         </section>
+
+        <section class="s_direccion_cient">
+            <div class="center">
+                <div class="c_direccion_cient">
+
+                </div>
+            </div>
+        </section>
+
+        <section class="s_equipo_medico">
+            <div class="center">
+                <div class="c_equipo_medico">
+                    <h2 class="tit_section c_lightblue">
+                        EQUIPO MÉDICO
+                    </h2>
+                    <div class="slider_equipo_med">
+                        <!-- Swiper -->
+                        <div class="swiper swiperEquipoMed">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">Slide 1</div>
+                                <div class="swiper-slide">Slide 2</div>
+                                <div class="swiper-slide">Slide 3</div>
+                                <div class="swiper-slide">Slide 4</div>
+                                <div class="swiper-slide">Slide 5</div>
+                                <div class="swiper-slide">Slide 6</div>
+                                <div class="swiper-slide">Slide 7</div>
+                                <div class="swiper-slide">Slide 8</div>
+                                <div class="swiper-slide">Slide 9</div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="s_nuestro_equipo">
+            <div class="center">
+                <div class="c_nuestro_equipo">
+                    <h2 class="tit_section c_lightblue">
+                        Nuestro equipo
+                    </h2>
+                    <div class="desc_section">
+                        Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC.
+                    </div>
+                    <div class="c_icon_equipos">
+                        <div class="card_i_equio">
+                            <picture>
+                                <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i1.svg" alt="">
+                            </picture>
+                            <label for="">Lorem Ipsum</label>
+                        </div>
+                        <div class="card_i_equio">
+                            <picture>
+                                <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i2.svg" alt="">
+                            </picture>
+                            <label for="">Lorem Ipsum</label>
+                        </div>
+                        <div class="card_i_equio">
+                            <picture>
+                                <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i3.svg" alt="">
+                            </picture>
+                            <label for="">Lorem Ipsum</label>
+                        </div>
+                        <div class="card_i_equio">
+                            <picture>
+                                <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i4.svg" alt="">
+                            </picture>
+                            <label for="">Lorem Ipsum</label>
+                        </div>
+                    </div>
+
+                    <!-- SLIDER -->
+
+                    <div class="slider_n_equipo">
+
+                    </div>
+
+                    <div class="cont_btn al_center">
+                        <a href="" class="btn lightblue">Reserva tu cita</a>
+                    </div>
+                </div>
+            </div>
+        </section>
      
     </main>
 
