Home Responsive OK

--- a/index.html
+++ b/index.html
@@ -146,58 +146,59 @@
                     <div class="swiper-slide">
                         <div class="cont_gen_slider">
                             <div class="c_txt_slider">
-                                <h2>
-                                    CLUB DE <br> <span> BENEFICIOS </span>
+                                <h2 data-swiper-parallax="-100" data-swiper-parallax-opacity="0.1">
+                                    CLUB DE <span> BENEFICIOS </span>
                                 </h2>
-                                <div class="txt_desc_slider">
+                                <div class="txt_desc_slider" data-swiper-parallax="-300" data-swiper-parallax-opacity="0.3">
                                     Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de <span> relleno estándar</span>
                                 </div>
-                                <div class="c_cta al_left">
+                                <div class="c_cta al_left" data-swiper-parallax="-600" data-swiper-parallax-opacity="0.6">
                                     <a href="" class="btn lightblue">Conoce más</a>
                                 </div>
                             </div>
                             <picture>
-                                <img src="images/diseno/01-home/img_slider2.png" alt="">
+                                <img src="images/diseno/01-home/img_slider2.png" class="swiper-lazy" alt="">
+                            </picture>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="cont_gen_slider">
+                            <div class="c_txt_slider">
+                                <h2 data-swiper-parallax="-100" data-swiper-parallax-opacity="0.1">
+                                    CLUB DE <span> BENEFICIOS </span>
+                                </h2>
+                                <div class="txt_desc_slider" data-swiper-parallax="-300" data-swiper-parallax-opacity="0.3">
+                                    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de <span> relleno estándar</span>
+                                </div>
+                                <div class="c_cta al_left" data-swiper-parallax="-600" data-swiper-parallax-opacity="0.6">
+                                    <a href="" class="btn lightblue">Conoce más</a>
+                                </div>
+                            </div>
+                            <picture>
+                                <img src="images/diseno/01-home/img_slider2.png" class="swiper-lazy" alt="">
+                            </picture>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="cont_gen_slider">
+                            <div class="c_txt_slider">
+                                <h2 data-swiper-parallax="-100" data-swiper-parallax-opacity="0.1">
+                                    CLUB DE <span> BENEFICIOS </span>
+                                </h2>
+                                <div class="txt_desc_slider" data-swiper-parallax="-300" data-swiper-parallax-opacity="0.3">
+                                    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de <span> relleno estándar</span>
+                                </div>
+                                <div class="c_cta al_left" data-swiper-parallax="-600" data-swiper-parallax-opacity="0.6">
+                                    <a href="" class="btn lightblue">Conoce más</a>
+                                </div>
+                            </div>
+                            <picture>
+                                <img src="images/diseno/01-home/img_slider2.png" class="swiper-lazy" alt="">
                             </picture>
                         </div>
                     </div>
 
-                    <div class="swiper-slide">
-                        <div class="cont_gen_slider">
-                            <div class="c_txt_slider">
-                                <h2>
-                                    CLUB DE <br> <span> BENEFICIOS </span>
-                                </h2>
-                                <div class="txt_desc_slider">
-                                    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de <span> relleno estándar</span>
-                                </div>
-                                <div class="c_cta al_left">
-                                    <a href="" class="btn lightblue">Conoce más</a>
-                                </div>
-                            </div>
-                            <picture>
-                                <img src="images/diseno/01-home/img_slider2.png" alt="">
-                            </picture>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="cont_gen_slider">
-                            <div class="c_txt_slider">
-                                <h2>
-                                    CLUB DE <br> <span> BENEFICIOS </span>
-                                </h2>
-                                <div class="txt_desc_slider">
-                                    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de <span> relleno estándar</span>
-                                </div>
-                                <div class="c_cta al_left">
-                                    <a href="" class="btn lightblue">Conoce más</a>
-                                </div>
-                            </div>
-                            <picture>
-                                <img src="images/diseno/01-home/img_slider2.png" alt="">
-                            </picture>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -292,7 +293,7 @@
                             <img width="40" height="40" src="images/diseno/01-home/bl2.svg" alt="">
                         </picture>
                         <div class="desc_i_bl">
-                            Patentes propias para el tratamiento de la presbicia.
+                            Desarrollo de investigaciones para la FDA.
                         </div>
                     </div>
                     <div class="items_bl">
@@ -300,7 +301,7 @@
                             <img width="40" height="40" src="images/diseno/01-home/bl3.svg" alt="">
                         </picture>
                         <div class="desc_i_bl">
-                            Patentes propias para el tratamiento de la presbicia.
+                            Tecnología aplicada a la cirugía oftalmológica.
                         </div>
                     </div>
                     <div class="items_bl">
@@ -308,7 +309,7 @@
                             <img width="40" height="40" src="images/diseno/01-home/bl4.svg" alt="">
                         </picture>
                         <div class="desc_i_bl">
-                            Patentes propias para el tratamiento de la presbicia.
+                            + de 25.000 cirugías oftalmológicas.
                         </div>
                     </div>
                 </div>
@@ -421,7 +422,7 @@
             <div class="center">
                 <div class="c_club_bene">
                     <div class="col">
-                        <h2>CLUB DE <br> <span> BENEFICIOS</span></h2>
+                        <h2>CLUB DE <span> BENEFICIOS</span></h2>
                         <picture class="tarjeta_club">
                             <img width="375" height="208" src="images/diseno/01-home/tarjeta.png" alt="">
                         </picture>
