avance nuestros profesionales

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
     <header>
 
-         <!-- BOTONES FIJOS EN EL VIEWPORT -->
+        <!-- BOTONES FIJOS EN EL VIEWPORT -->
 
-         <a href="" class="btn cta_reserva_cita">
-            Reserva <br>tu cita
+        <a href="" class="btn cta_reserva_cita">
+            Reserva tu cita
         </a>
 
         <a href="" class="cta_whatsapp">
@@ -81,16 +81,16 @@
                         <a href="">ENG</a>
                     </div>
                     <li>
-                        <a>QUIÉNES SOMOS <span class="fas fa-chevron-up"></span>
-                        </a>
+                        <a href="quienes_somos.html" class="">QUIÉNES SOMOS </a>
+                        
+                    </li>
+                    <li>
+                        <a>SERVICIOS<span class="fas fa-chevron-up"></span></a>
                         <ul class="submenu">
                             <li>
                                 <a href="">asdasdas</a>
                             </li>
                         </ul>
-                    </li>
-                    <li>
-                        <a>SERVICIOS<span class="fas fa-chevron-up"></span></a>
                     </li>
                     <li>
                         <a>DEFECTOS VISUALES<span class="fas fa-chevron-up"></span></a>
