--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -21,7 +21,7 @@
         <!-- BOTONES FIJOS EN EL VIEWPORT -->
 
         <a href="" class="btn cta_reserva_cita">
-           Reserva <br>tu cita
+           Reserva tu cita
        </a>
 
        <a href="" class="cta_whatsapp">
