--- a/nuestros_profesionales.html
+++ b/nuestros_profesionales.html
@@ -181,18 +181,80 @@
                         <!-- Swiper -->
                         <div class="swiper swiperEquipoMed">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">Slide 1</div>
-                                <div class="swiper-slide">Slide 2</div>
-                                <div class="swiper-slide">Slide 3</div>
-                                <div class="swiper-slide">Slide 4</div>
-                                <div class="swiper-slide">Slide 5</div>
-                                <div class="swiper-slide">Slide 6</div>
-                                <div class="swiper-slide">Slide 7</div>
-                                <div class="swiper-slide">Slide 8</div>
-                                <div class="swiper-slide">Slide 9</div>
+
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="106" height="106" src="" alt="">
+                                    </picture>
+                                    <h4>Dr. gustavo tamayo</h4>
+                                    <h5>comes from sections</h5>
+                                    <summary>
+                                        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año
+                                    </summary>
+                                    <div class="cont_btn">
+                                        <a href="" class="btn lightblue">Conoce más</a>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="106" height="106" src="" alt="">
+                                    </picture>
+                                    <h4>Dr. gustavo tamayo</h4>
+                                    <h5>comes from sections</h5>
+                                    <summary>
+                                        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año
+                                    </summary>
+                                    <div class="cont_btn">
+                                        <a href="" class="btn lightblue">Conoce más</a>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="106" height="106" src="" alt="">
+                                    </picture>
+                                    <h4>Dr. gustavo tamayo</h4>
+                                    <h5>comes from sections</h5>
+                                    <summary>
+                                        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año
+                                    </summary>
+                                    <div class="cont_btn">
+                                        <a href="" class="btn lightblue">Conoce más</a>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="106" height="106" src="" alt="">
+                                    </picture>
+                                    <h4>Dr. gustavo tamayo</h4>
+                                    <h5>comes from sections</h5>
+                                    <summary>
+                                        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año
+                                    </summary>
+                                    <div class="cont_btn">
+                                        <a href="" class="btn lightblue">Conoce más</a>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="106" height="106" src="" alt="">
+                                    </picture>
+                                    <h4>Dr. gustavo tamayo</h4>
+                                    <h5>comes from sections</h5>
+                                    <summary>
+                                        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año
+                                    </summary>
+                                    <div class="cont_btn">
+                                        <a href="" class="btn lightblue">Conoce más</a>
+                                    </div>
+                                </div>
+                                
                             </div>
-                            <div class="swiper-pagination"></div>
+                            
                         </div>
+
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+
                     </div>
                 </div>
             </div>
