ajuste buscador escritorio y mobile

--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
                     <!-- BUSCADOR SOLO MOBILE -->
 
                     <div class="cont_search_mobile">
-                        <button type="submit" class="search fas fa-search"></button>
-                        <input type="search">
+                        <div class="sub_contain">
+                            <button type="submit" class="search fas fa-search"></button>
+                            <input type="search">
+                        </div>
                     </div>
 
                     <!-- ****** -->
